--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -6,3 +6,15 @@ execution.default.quitDriversAfterExecutingTestCase=false
 execution.default.quitDriversAfterExecutingTestSuite=true
 report.takeScreenshotOption=true
 execution.default.smartWaitMode=true
+show-Profiles=true
+show-Test\ Cases=true
+show-Object\ Repository=true
+show-Test\ Suites=true
+show-Data\ Files=true
+show-Checkpoints=true
+show-Keywords=true
+show-Test\ Listeners=true
+show-Reports=true
+show-Include=true
+show-Plugins=true
+show-Screenshots=true
